--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <header>
     <div class="container">
-      <img src="images/formal.png" alt="Hardika Regmi" class="profile-pic">
+      <img src="formal.png" alt="Hardika Regmi" class="profile-pic">
       <h1>Hardika Regmi</h1>
       <p class="profession">Java Developer</p>
     </div>
